Added FieldModifier and Bindable to correct summary issue

--- a/Uno.Validation/Uno.Validation.Shared/MainPage.xaml
+++ b/Uno.Validation/Uno.Validation.Shared/MainPage.xaml
@@ -10,7 +10,7 @@
     mc:Ignorable="d">
 
     <Page.DataContext>
-        <viewmodels:MainViewModel x:Name="ViewModel" />
+        <viewmodels:MainViewModel x:Name="ViewModel" x:FieldModifier="public" />
     </Page.DataContext>
 
     <Grid>
